@@ -3,7 +3,7 @@ package App::rmspaces;
 use strict;
 use warnings;
 
-our $VERSION = 0.4;
+our $VERSION = 0.5;
 
 1;
 
