@@ -1,5 +1,8 @@
 Revision history for Perl module App::rmspaces
 
+Unreleased
+  * Fix bug when operating on paths with target character.
+
 0.4 2017-07-19
   * Fix license fields for metadata.
   * Include test suite in distribution.
